# PoC-Music-Recommendation-System

./: .dockerignore  Dockerfile  compose.yaml  pyproject.toml
app/: config.py  main.py
app/model/: songFeatures.py
app/recommendation/: helper.py  recommendationEngine.py
app/router/: authentication.py  calculate_preference.py  recommendation.py  track_history.py
app/tracks/: preprocessing.ipynb
app/utility/: client.py
